# math-toolbox

./: .gitignore  CMakeLists.txt  README.md  cpp-project-template-setup.sh  math-toolbox-setup.sh
src/: CMakeLists.txt
src/sdk/: CMakeLists.txt
src/sdk/sqrt/: CMakeLists.txt  sqrt.cpp  sqrt.h
src/sdk/sqrt/ut/: CMakeLists.txt  sqrt-functional.cpp
src/sorting/: CMakeLists.txt
src/sorting/bubble-sort/: bubble-sort.h
src/sorting/insertion-sort/: insertion-sort.h
src/sorting/selection-sort/: selection-sort.h
src/sorting/ut/: CMakeLists.txt  sorting-functional.cpp
